--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>OpenGammaStrataProcessing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>OpenGammaStrataProcessing</name>
+  <properties>
+  <maven.compiler.source>11</maven.compiler.source>
+  <maven.compiler.target>
+  11</maven.compiler.target></properties>
   <dependencies>
   
   <dependency>
