--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,24 @@
 </dependency>
   
   </dependencies>
+  <build>
+   <plugins>
+	<plugin>
+		<!-- Build an executable JAR -->
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<version>3.1.0</version>
+		<configuration>
+			<archive>
+				<manifest>
+					<addClasspath>true</addClasspath>
+					<!-- here we specify that we want to use the main method within the App class -->
+					<mainClass>Main</mainClass>
+				</manifest>
+			</archive>
+		</configuration>
+	</plugin>
+</plugins>
+  </build>
+ 
 </project>
