--- a/pom.xml
+++ b/pom.xml
@@ -18,23 +18,75 @@
   
   </dependencies>
   <build>
-   <plugins>
-	<plugin>
+  <!--  <plugins>
+	<plugin>-->
 		<!-- Build an executable JAR -->
-		<groupId>org.apache.maven.plugins</groupId>
+		<!-- <groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-jar-plugin</artifactId>
 		<version>3.1.0</version>
 		<configuration>
 			<archive>
 				<manifest>
-					<addClasspath>true</addClasspath>
+					<addClasspath>true</addClasspath>-->
 					<!-- here we specify that we want to use the main method within the App class -->
-					<mainClass>com.kpts.port23.Main</mainClass>
+				<!--	<mainClass>com.kpts.port23.Main</mainClass>
 				</manifest>
 			</archive>
 		</configuration>
 	</plugin>
-</plugins>
+</plugins>-->
+
+<finalName>openStarata</finalName>
+		<plugins>
+
+			<!-- download source code in Eclipse, best practice -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>false</downloadJavadocs>
+				</configuration>
+			</plugin>
+
+			<!-- Set a compiler level -->
+			<plugin>			
+				<groupId>org.apache.maven.plugins</groupId>
+   				 <artifactId>maven-compiler-plugin</artifactId>
+    				<version>3.11.0</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+
+		<!-- Maven Shade Plugin -->
+		<plugin>
+		   <groupId>org.apache.maven.plugins</groupId>
+   			 <artifactId>maven-shade-plugin</artifactId>
+  				  <version>3.5.0</version>
+		  <executions>
+		     <!-- Run shade goal on package phase -->
+		    <execution>
+			<phase>package</phase>
+			<goals>
+				<goal>shade</goal>
+			</goals>
+			<configuration>
+			  <transformers>
+				<!-- add Main-Class to manifest file -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+					<mainClass>com.kpts.port23.Main</mainClass>
+				</transformer>
+			  </transformers>
+			</configuration>
+		      </execution>
+		  </executions>
+		</plugin>
+
+		</plugins>
+
   </build>
  
 </project>
