--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,36 @@
   <maven.compiler.source>11</maven.compiler.source>
   <maven.compiler.target>
   11</maven.compiler.target></properties>
+  
+  <repositories>
+  <repository>
+    <id>universityOfManchester-graal</id>
+    <url>https://raw.githubusercontent.com/beehive-lab/tornado/maven-tornadovm</url>
+  </repository>
+</repositories>
+
   <dependencies>
+
+<dependency>
+      <groupId>tornado</groupId>
+      <artifactId>tornado-api</artifactId>
+      <version>0.15.1</version>
+   </dependency>
+
+   <dependency>
+      <groupId>tornado</groupId>
+      <artifactId>tornado-matrices</artifactId>
+      <version>0.15.1</version>
+   </dependency>
+
   
   <dependency>
   <groupId>com.opengamma.strata</groupId>
   <artifactId>strata-measure</artifactId>
   <version>2.12.27</version>
 </dependency>
+
+
   
   </dependencies>
   <build>
